[UPD] Personalize name and image

--- a/estilos.css
+++ b/estilos.css
@@ -3,7 +3,7 @@
 /******************************************************/
 /* Fondo de la página index */
 .index-bg {
-    background-image: url("assets/images/bricotodo.jpg");
+    background-image: url("assets/images/cafe-gatuno.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
